--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<title>贝游</title>
+		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+		
+		<title>［贝游科技］各种安卓app制作</title>
 	</head>
 
 
