--- a/index.html
+++ b/index.html
@@ -2,10 +2,25 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-		
+		<link rel="stylesheet" type="text/css" href="css/beiyou.css">
+
 		<title>［贝游科技］各种安卓app制作</title>
 	</head>
 
 
-	<body>aabb</body>
+	<body>
+		<div id="header">
+			<div id="header_title">
+				<div id="site_title">
+					<h1>
+						<img src="images/company_name.png">
+					</h1>
+				</div>
+			</div>
+		</div>
+
+
+		<div id="content">content</div>
+		<div id="footer">footer</div>
+	</body>
 </html>
