--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 		<link rel="stylesheet" type="text/css" href="css/beiyou.css">
 
 		<title>［贝游科技］各种安卓app制作</title>
+
+		<script type="text/javascript" src="http://lib.sinaapp.com/js/jquery/1.7.2/jquery.min.js"></script>
+		<script type="text/javascript" src="js/beiyou.js"></script>
 	</head>
 
 
@@ -13,9 +16,18 @@
 			<div id="header_title">
 				<div id="site_title">
 					<h1>
-						<img src="images/company_name.png">
+						<img src="images/company_name.png" />
 					</h1>
 				</div>
+			</div>
+			<div id="header_menu">
+				<ul>
+					<li><a href="index.html" class="current">首页</a></li>
+					<li><a href="index.html">作品</a></li>
+					<li><a href="index.html">博客</a></li>
+					<li><a href="index.html">爱好</a></li>
+					<li><a href="index.html">关于我们</a></li>
+				</ul>
 			</div>
 		</div>
 
