--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
 		<script type="text/javascript" src="http://lib.sinaapp.com/js/jquery/1.7.2/jquery.min.js"></script>
 		<script type="text/javascript" src="js/beiyou.js"></script>
+		<link href="css/jquery.ennui.contentslider.css" rel="stylesheet" type="text/css" media="screen,projection" />
+		<script type="text/javascript" src="js/jquery.ennui.contentslider.js"></script>
+		<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
 	</head>
 
 
@@ -28,6 +31,42 @@
 					<li><a href="index.html">爱好</a></li>
 					<li><a href="index.html">关于我们</a></li>
 				</ul>
+			</div>
+			<div id="header_banner">
+				<div id="one" class="contentslider">
+					<a href="#" class="cs_leftBtn">
+						<img src="images/cs_leftImg.png">
+					</a>
+					<div class="cs_wrapper">
+						<div class="cs_slider">
+							<div class="cs_article">
+								<div class="left">
+									<h2>标题</h2>
+									<p>内容</p>
+								</div>
+								<div class="right">图片</div>
+							</div>
+							<div class="cs_article">
+								<div class="left">
+									<h2>标题2</h2>
+									<p>内容2</p>
+								</div>
+								<div class="right">图片2</div>
+							</div>
+							<div class="cs_article">
+								<div class="left">
+									<h2>标题3</h2>
+									<p>内容3</p>
+								</div>
+								<div class="right">图片3</div>
+							</div>
+						</div>
+					</div>
+					<a href="#" class="cs_rightBtn">
+						<img src="images/cs_rightImg.png">
+					</a>
+				</div>
+				
 			</div>
 		</div>
 
