--- a/index.html
+++ b/index.html
@@ -71,7 +71,14 @@
 		</div>
 
 
-		<div id="content">content</div>
+		<div id="content">
+			<div id="content_main">
+				<h2>标题</h2>
+				<p>content</p>	
+			</div>
+			<div id="content_slider">content_slider</div>
+		</div>
+
 		<div id="footer">footer</div>
 	</body>
 </html>
