--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
 			<div id="content_slider">content_slider</div>
 		</div>
 
-		<div id="footer">footer</div>
+		<div id="footer">
+			<div id="footer_content">
+				Copyright 2015 北京贝游科技有限公司
+			</div>
+		</div>
 	</body>
 </html>
