add some something

--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
 						<div class="cs_slider">
 							<div class="cs_article">
 								<div class="left">
-									<h2>标题</h2>
-									<p>内容</p>
+									<h2>腾哥</h2>
+									<p>腾哥，姓名：王腾，目前就职于北京趣拿软件科技有限公司．</p>
 								</div>
-								<div class="right">图片</div>
+								<div class="right">
+									<img src="images/wt.jpg" />
+								</div>
 							</div>
 							<div class="cs_article">
 								<div class="left">
@@ -73,15 +75,15 @@
 
 		<div id="content">
 			<div id="content_main">
-				<h2>标题</h2>
-				<p>content</p>	
+				<h2>腾哥</h2>
+				<p>腾哥，姓名：王腾，目前就职于北京趣拿软件科技有限公司．</p>	
 			</div>
-			<div id="content_slider">content_slider</div>
+			<div id="content_slider">相关链接</div>
 		</div>
 
 		<div id="footer">
 			<div id="footer_content">
-				Copyright 2015 北京贝游科技有限公司
+				Copyright 2015 深圳贝游科技有限公司
 			</div>
 		</div>
 	</body>
