--- a/blogs.html
+++ b/blogs.html
@@ -25,8 +25,8 @@
 			</div>
 			<div id="header_menu">
 				<ul>
-					<li><a href="index.html" class="current">首页</a></li>
-					<li><a href="blogs.html">作品</a></li>
+					<li><a href="index.html">首页</a></li>
+					<li><a href="index.html"  class="current">作品</a></li>
 					<li><a href="index.html">博客</a></li>
 					<li><a href="index.html">爱好</a></li>
 					<li><a href="index.html">关于我们</a></li>
